fix: Correct minor misalignment in the UI

--- a/src/renderer/concept/styles.scss
+++ b/src/renderer/concept/styles.scss
@@ -41,6 +41,9 @@ $leftPadding: 2rem;
 }
 
 :local .entryStatus {
+  display: flex;
+  align-items: center;
+
   :first-child {
     margin-right: 1rem;
   }
